# strict-path-rs

./: .cursorrules  .gitignore  AGENTS.md  ANCHORED_SYMLINK_CLAMPING_PROPOSAL.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EMOJI_FIXES_DOCS_BRANCH.md  LICENSE-APACHE  LLM_API_REFERENCE.md  LLM_CONTEXT.md  LLM_CONTEXT_FULL.md  LLM_USER.md  MDBOOK_SYMLINK_UPDATES.md  README.md  ROADMAP.md  ROADMAP_COMPRESSED.md  VIRTUAL_PATH_DESIGN.md  ci-check-demos.ps1  ci-check-demos.sh  ci-check.ps1  ci-check.sh  ci-local.ps1  ci-local.sh  context7.json  llms.txt  test_interop_path.rs  tmp_staged_static.rs
.agents/: agent-behavior.md  api-usage.md  ci-workflow.md  coding-standards.md  design-decisions.md  documentation.md
.github/: CODEOWNERS  copilot-instructions.md
.github/chatmodes/: Beast Mode 3.1.chatmode.md  Extensive Mode GPT4.1 Base.chatmode.md  Extensive Mode GPT5 Base.chatmode.md  Extensive Mode.chatmode.md
.github/instructions/: beastmode3.1.chatmode.md  extensivemode.chatmode.md  memory.instruction.md
.github/workflows/: audit.yml  ci.yml  kani.yml  release.yml  semver.yml
benches/: Cargo.toml  README.md
benches/benches/: caching_benefits.rs  performance_comparison.rs
benches/docs/: BENCHMARK_ANALYSIS.md  CACHING_BENEFITS_REPORT.md  OVERHEAD_QUICK_REFERENCE.md  PERFORMANCE_OVERHEAD_ANALYSIS.md
benches/src/: lib.rs
book/: README.md  best_practices.md  book.toml  design_decisions.md  os_directories.md  security_methodology.md  type_history_design.md
book/axum_tutorial/: chapter1_setup.md  chapter3_user_storage.md
book/ergonomics/: choosing_canonicalized_vs_lexical_solution.md  daily_patterns.md  equality_ordering.md  (+3 more)
demos/: Cargo.toml  README.md
demos/config/: config.prod.json  config.toml  user-config.yaml
docs/: 404.html  anti_patterns.html  archive_extractors.html  authorization_security.html  best_practices.html  chapter_1.html  design_decisions.html  development_story.html  ecosystem_integration.html  examples.html  examples_by_mode.html  features.html  getting_started.html  index.html  internals.html  marker_tutorial.html  os_directories.html  print.html  searcher-c2a407aa.js  searchindex-2449cbce.js  searchindex-55fd61e2.js  searchindex-7ae872e7.js  searchindex-91577c49.js  searchindex-c65ad018.js  searchindex-fcfdc226.js  searchindex.js  searchindex.json  security_methodology.html  toc-21247364.js  toc-8fc2f710.js  toc-c8b1e92a.js  toc.html  toc.js  type_history_design.html  type_system_guarantees.html
docs_src/: book.toml
examples/: Cargo.toml  api_test.rs  archive_extractor.rs  config_loader.rs  config_manager.rs  docker_volume_manager.rs  error_handling.rs  file_operations.rs  marker_example.rs  new_api.rs  safe_archive_extractor.rs  secure_config_loader.rs  secure_file_copy_cli.rs  static_file_server.rs  static_site_generator.rs  temp_file_manager.rs  trait_usage.rs  user_data_manager.rs  virtual_root_display.rs
examples/config/: config.dev.toml  config.toml  test-config.json
guide_src/: book.toml
jailed-path/: Cargo.toml  README.md
jailed-path/examples/: jail_one_liner.rs  one_liners.rs  vroot_one_liner.rs
jailed-path/src/: lib.rs
jailed-path/src/error/: mod.rs
jailed-path/src/path/: jailed_path.rs  mod.rs  virtual_path.rs
jailed-path/src/path/tests/: create_parent.rs  creation.rs  filesystem.rs  marker.rs  method_coverage.rs  methods.rs  mod.rs  security.rs  serde.rs  symlink_resolution.rs  virtual_display.rs  virtual_path_accessors.rs
jailed-path/src/tests/: comparison_tests.rs  mod.rs
jailed-path/src/validator/: jail.rs  mod.rs  path_history.rs  stated_path.rs  test_display_methods.rs  test_interop_path.rs  virtual_root.rs
jailed-path/src/validator/tests/: jail_and_vroot.rs  mod.rs
soft-canonicalize/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
soft-canonicalize/.github/workflows/: ci.yml
soft-canonicalize/examples/: basic_usage.rs  security_demo.rs
soft-canonicalize/src/: lib.rs
src/: clamped_path.rs  error.rs  ext.rs  jailed_path.rs  lib.rs  soft_canonicalize.rs  validator.rs  virtual_path.rs  virtual_root.rs
strict-path/: Cargo.toml  README.md
strict-path/examples/: app_path_integration.rs  dirs_integration.rs  marker_transformation.rs  one_liners.rs  os_directories.rs  path_boundary_one_liner.rs  tempfile_integration.rs  user_virtual_root.rs  vroot_one_liner.rs
strict-path/src/: lib.rs  sanitize.rs  verification.rs
strict-path/src/error/: mod.rs  tests.rs
strict-path/src/path/: mod.rs  strict_path.rs  virtual_path.rs
strict-path/src/path/strict_path/: fs.rs  iter.rs  links.rs  mod.rs  traits.rs
strict-path/src/path/tests/: advanced_security.rs  advanced_security_bypass.rs  advanced_security_ntfs.rs  create_parent.rs  creation.rs  cve_2025_11001.rs  cve_2025_11001_archive.rs  cve_2025_11001_core.rs  filesystem.rs  filesystem_append.rs  filesystem_copy.rs  filesystem_io.rs  filesystem_metadata.rs  marker.rs  method_coverage.rs  methods.rs  mod.rs  proc_comprehensive_coverage.rs  proc_indirect_symlink.rs  proc_magic_symlink.rs  proc_magic_symlink_regression.rs  proc_magic_symlink_vpath.rs  read_dir_and_conversions.rs  rename.rs  security.rs  security_audit_findings.rs  security_audit_findings_f6.rs  security_audit_findings_f7.rs  security_canonicalization_proof.rs  security_input_encoding.rs  security_io.rs  security_symlink_escape.rs  security_traversal.rs  serde.rs  softcanon_53_symlink_parent_traversal.rs  symlink_following_external.rs  symlink_helpers.rs  symlink_methods.rs  symlink_resolution.rs  symlink_virtual_clamping.rs  (+3 more)
strict-path/src/path/virtual_path/: display.rs  fs.rs  iter.rs  links.rs  mod.rs  traits.rs
strict-path/src/tests/: app_path_tests.rs  comparison_tests.rs  debug_soft_canonicalize.rs  fuzz_security.rs  mod.rs  readme_examples.rs
strict-path/src/validator/: mod.rs  path_boundary.rs  path_history.rs  virtual_root.rs
strict-path/src/validator/tests/: anchored_backslash_regression.rs  mod.rs  path_boundary_and_virtual_root.rs  root_helpers.rs  test_display_methods.rs
tests/: integration_tests.rs  try_jail_test.rs  workflow.rs
(+162 files in other folders)
