[package]
name = "jailed-path"
version = "0.0.4"
edition = "2021"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
description = "Prevent directory traversal with type-safe virtual path jails and safe symlinks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DK26/jailed-path-rs"
homepage = "https://github.com/DK26/jailed-path-rs"
documentation = "https://docs.rs/jailed-path"
readme = "README.md"
keywords = ["path", "security", "jail", "filesystem", "traversal"]
categories = ["filesystem", "development-tools", "web-programming"]

[dependencies]
soft-canonicalize = "0.3.0"

[dev-dependencies]
tempfile = "3.20"

# Code Examples Dependencies
anyhow = "1.0"
app-path = "1.1"
tiny_http = "0.12"
zip = { version = "=1.1.3", default-features = false, features = [
    "deflate",
    "deflate64",
    "flate2",
] }
clap = { version = "=4.3.17", features = ["derive"] }
indicatif = "0.18.0"
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = [
    "miniz_oxide",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "=0.9.33"
chrono = { version = "=0.4.39", features = ["serde"] }
walkdir = "2.3"
tera = "1.17"
pulldown-cmark = "=0.10.0"
serde_derive = "1.0"
uuid = { version = "1.2", features = ["v4"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }

# Example-only pins to keep transitive parser crates compatible with MSRV 1.70
pest = "=2.7.15"
pest_derive = "=2.7.15"
pest_generator = "=2.7.15"
pest_meta = "=2.7.15"
bstr = "=1.10.0"
