## Workspace layout note
##
## We intentionally keep `examples/` OUT of the workspace to decouple it from
## the library crate's MSRV (Rust 1.70). This lets us:
##   - Enforce MSRV for the library with `--locked` on Rust 1.70 in CI
##   - Build richer examples on latest stable with newer ecosystem crates
##   - Avoid workspace lock/feature resolution coupling between the two
## See `.github/workflows/ci.yml` for how CI runs the examples separately.
[workspace]
resolver = "2"
members = ["jailed-path"]
# Critical to MSRV strategy: do NOT include `examples` in the workspace.
exclude = ["examples"]

# Prefer building the main library by default (not the examples crate)
default-members = ["jailed-path"]

[profile.release]
lto = true
codegen-units = 1
strip = true
