[package]
name = "strict-path-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
strict-path = { path = "../strict-path", features = ["virtual-path"] }
# Using DK26 fork dev branch for benchmarks consistency with strict-path
# TODO: Switch back to upstream `soft-canonicalize = "0.5.3"` after changes are released
soft-canonicalize = { git = "https://github.com/DK26/soft-canonicalize-rs", branch = "dev", features = [
    "anchored",
] }
criterion = "0.7.0"
tempfile = "3.22"

[[bench]]
name = "performance_comparison"
harness = false

[[bench]]
name = "caching_benefits"
harness = false
