## Demos crate (intentionally NOT in the workspace)
##
## Why this is separate:
## - Our library (`strict-path/`) targets MSRV Rust 1.71 and is checked with
##   `--locked` on that toolchain in CI.
## - Real-world demos often want newer crates and features (latest stable),
##   which can raise MSRV if coupled through a shared workspace lockfile.
## - Keeping `demos/` as its own crate avoids lock/feature coupling and lets
##   CI build it independently on stable (see `.github/workflows/ci.yml`).
##
## How it wires together:
## - Depends on the library via a path dependency: `strict-path = { path = "../strict-path" }`
## - Heavy deps are optional behind namespaced features (e.g., `with-zip`).
## - `publish = false` ensures this crate never goes to crates.io.
[package]
name = "strict-path-demos"
version = "0.0.0"
edition = "2021"
description = "Demo binaries for strict-path (non-publishable)"
publish = false

[dependencies]
# Build demos against the workspace library. Do NOT enable any
# non-existent features on the library here; keep example-only features
# local to this crate so MSRV checks for the library remain isolated.
strict-path = { path = "../strict-path" }
config = "0.15.18"
# Zip-related deps are optional and only enabled via the `with-zip` feature.
# Use namespaced dependency features to avoid relying on removed implicit
# features in newer `zip` versions.
zip = { version = "5.1.1", default-features = false, optional = true, features = [
    "deflate",
] }
flate2 = { version = "1.0", default-features = false, optional = true, features = [
    "miniz_oxide",
] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
indicatif = "0.18"
tar = "0.4"
walkdir = "2.3"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0.99"
# MCP server runtime (official). We target the latest; update as needed in lockfile.
rmcp = { version = "0.8.0", features = [
    "server",
    "transport-io",
], optional = true }
schemars = { version = "1.0.4", features = ["derive"] }
axum = "0.8.6"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
pulldown-cmark = "0.13.0"
tera = "1.17"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
serde_yaml = "0.9.33"
toml = "0.9.6"
aws-config = { version = "1.8.7", optional = true }
aws-sdk-s3 = { version = "1.107.0", optional = true }
app-path = { version = "1.1.2", optional = true }
dirs = { version = "6.0.0", optional = true }
tempfile = { version = "3.22", optional = true }
futures = "0.3"
# JWT and crypto dependencies for authorization demos
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22.1", optional = true }

[dev-dependencies]

[features]
# Make heavy archive-related dependencies optional so the demos crate
# builds quickly by default when those features are not needed.
default = []
with-zip = ["dep:zip", "dep:flate2"]
with-aws = ["dep:aws-config", "dep:aws-sdk-s3"]
with-app-path = ["dep:app-path"]
with-dirs = ["dep:dirs"]
with-tempfile = ["dep:tempfile"]
with-rmcp = ["dep:rmcp"]
with-jwt = ["dep:hmac", "dep:sha2", "dep:base64"]
virtual-path = ["strict-path/virtual-path"]

[[bin]]
name = "cli_backup_tool"
path = "src/bin/cli/cli_backup_tool.rs"

[[bin]]
name = "secure_file_copy_cli"
path = "src/bin/cli/secure_file_copy_cli.rs"

[[bin]]
name = "tenant_user_virtual_root"
path = "src/bin/cli/tenant_user_virtual_root.rs"
required-features = ["virtual-path"]

[[bin]]
name = "config_includes"
path = "src/bin/config/config_includes.rs"
required-features = ["virtual-path"]

[[bin]]
name = "config_management_example"
path = "src/bin/config/config_management_example.rs"
required-features = ["virtual-path"]

[[bin]]
name = "portable_app_demo"
path = "src/bin/config/portable_app_demo.rs"
required-features = ["with-app-path", "virtual-path"]

[[bin]]
name = "user_data_manager"
path = "src/bin/data/user_data_manager.rs"

[[bin]]
name = "archive_extractor"
path = "src/bin/security/archive_extractor.rs"
required-features = ["with-zip", "virtual-path"]

[[bin]]
name = "error_handling"
path = "src/bin/security/error_handling.rs"

[[bin]]
name = "static_file_server"
path = "src/bin/server/static_file_server.rs"
required-features = ["virtual-path"]

[[bin]]
name = "virtualpath_only_server"
path = "src/bin/server/virtualpath_only_server.rs"
required-features = ["virtual-path"]

[[bin]]
name = "multi_jail_server"
path = "src/bin/server/multi_jail_server.rs"
required-features = ["virtual-path"]

[[bin]]
name = "docker_volume_manager"
path = "src/bin/tools/docker_volume_manager.rs"

[[bin]]
name = "archive_builder"
path = "src/bin/tools/archive_builder.rs"
required-features = ["virtual-path"]

[[bin]]
name = "migrations_runner"
path = "src/bin/tools/migrations_runner.rs"

[[bin]]
name = "llm_workspace"
path = "src/bin/llm/llm_workspace.rs"
required-features = ["virtual-path"]

[[bin]]
name = "mcp_file_service"
path = "src/bin/llm/mcp_file_service.rs"
required-features = ["virtual-path"]

[[bin]]
name = "mcp_file_service_rmcp"
path = "src/bin/llm/mcp_file_service_rmcp.rs"
required-features = ["with-rmcp", "virtual-path"]

[[bin]]
name = "axum_static_server"
path = "src/bin/web/axum_static_server.rs"
required-features = ["virtual-path"]

[[bin]]
name = "tenant_workspace_service"
path = "src/bin/web/tenant_workspace_service.rs"
required-features = ["virtual-path"]

[[bin]]
name = "static_site_generator"
path = "src/bin/web/static_site_generator.rs"

[[bin]]
name = "rbac_portal_service"
path = "src/bin/web/rbac_portal_service.rs"
required-features = ["virtual-path"]

[[bin]]
name = "jwt_token_auth_service"
path = "src/bin/web/jwt_token_auth_service.rs"
required-features = ["with-jwt"]

[[bin]]
name = "s3_mirror"
path = "src/bin/cloud/s3_mirror.rs"

# Ecosystem integration demos
[[bin]]
name = "dirs_demo"
path = "src/bin/filesystem/dirs_demo.rs"
required-features = ["with-dirs"]

[[bin]]
name = "tempfile_demo"
path = "src/bin/filesystem/tempfile_demo.rs"
required-features = ["with-tempfile"]

[[bin]]
name = "temp_file_manager"
path = "src/bin/io/temp_file_manager.rs"

# Authorization pattern demos
[[bin]]
name = "document_vault_service"
path = "src/bin/web/document_vault_service.rs"
required-features = ["virtual-path"]
