[package]
name = "soft-canonicalize"
version = "0.1.0"
edition = "2021"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
description = "Pure path canonicalization that works with non-existing paths"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DK26/soft-canonicalize-rs"
homepage = "https://github.com/DK26/soft-canonicalize-rs"
documentation = "https://docs.rs/soft-canonicalize"
keywords = ["path", "canonicalize", "filesystem", "security"]
categories = ["filesystem", "os"]
readme = "README.md"
rust-version = "1.70.0"

[dependencies]

[dev-dependencies]

[[example]]
name = "basic_usage"
required-features = []

[[example]]
name = "security_demo"
required-features = []
