[package]
name = "strict-path"
version = "0.2.2"
edition = "2021"
# Minimum supported Rust version (MSRV)
rust-version = "1.76"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
description = "Secure path handling for untrusted input. Prevents directory traversal, symlink escapes, and 19+ real-world CVE attack patterns."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DK26/strict-path-rs"
homepage = "https://github.com/DK26/strict-path-rs"
documentation = "https://docs.rs/strict-path"
# Complete guide and examples: https://dk26.github.io/strict-path-rs/
readme = "../README.md"
keywords = ["path", "security", "sandbox", "sanitization", "traversal"]
categories = ["filesystem", "development-tools", "web-programming::http-server"]
# The path is now relative to the workspace root
exclude = ["../demos/**"]

[dependencies]
soft-canonicalize = { version = "0.5.6", features = ["anchored"] }

[dev-dependencies]
tempfile = { version = "3.27.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
app-path = "1.1.2"

# Windows test helper: junctions for symlink tests when admin privileges unavailable
[target.'cfg(windows)'.dev-dependencies]
junction = "1.4.2"

# Windows-specific runtime dependencies.
# `dunce` strips verbatim (`\\?\`) and device (`\\.\`) prefixes correctly —
# pattern-matches `std::path::Prefix` variants, preserves the raw `OsStr` (no
# lossy UTF-8 round-trip), and declines to strip when the target would be
# unsafe (reserved names, >260 chars, trailing dots, etc.).
[target.'cfg(windows)'.dependencies]
dunce = "1.0"
junction = { version = "1.4.2", optional = true }

[features]
# Opt-in virtual filesystem support (VirtualRoot, VirtualPath)
default = []
virtual-path = []
# Windows-only: enable built-in junction creation helpers using the `junction` crate
junctions = ["dep:junction"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "user_virtual_root"
path = "examples/user_virtual_root.rs"
required-features = ["virtual-path"]

[[example]]
name = "vroot_one_liner"
path = "examples/vroot_one_liner.rs"
required-features = ["virtual-path"]
